--- a/views/products/new.jade
+++ b/views/products/new.jade
@@ -10,7 +10,7 @@ block content
             input#inputType(type="number", placeholder="ex. 123456", name="type")
         p Created:
             input#inputCreated(type="date", name="created")
-        p Are You Available?:
+        p Available?:
             input#inputAvailable(type="checkbox", name="available")
         p
             button#btnSubmit(type="submit") submit
