Mejora el tratamiento de resultados vacios desde Mongodb

--- a/views/products/show.jade
+++ b/views/products/show.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
     h1.
-        Infophoto #{product._id}
+        Product #{product._id}
     p Name: #{product.name}
     p type: #{product.type}
     p Created: #{productcreated}
